--- a/week03/styles.css
+++ b/week03/styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body {
-  font-family: "Georgia", serif
+  font-family: "Georgia", serif;
   color: #000000;
   line-height: 140%;
   margin: 30px;
