--- a/week03/styles.css
+++ b/week03/styles.css
@@ -34,3 +34,19 @@ nav ul{
   color: #7C1A00;
 
 }
+nav li{
+  margin: 10px;
+  border: 1px;
+  border-style: solid;
+  border-color: #7C1A00;
+  background-color: #FFE597;
+}
+nav a {
+  color: white;
+  background-color: #8C9273;
+  padding: 3px 60px 3px 3px;
+  text-decoration: none;
+}
+nav a:hover {
+  background-color: #7C1A00;
+}
