--- a/week04/style.css
+++ b/week04/style.css
@@ -1,5 +1,6 @@
-html,
-body {
+/* || General setup */
+
+html, body {
   margin: 0;
   padding: 0;
 }
@@ -17,16 +18,12 @@ body {
 
 /* || typography */
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
   font-family: 'Cinzel Decorative', cursive;
   color: #2a2a2a;
 }
 
-p,
-input,
-li {
+p, input, li {
   font-family: 'Roboto Condensed', sans-serif;
   color: #2a2a2a;
 }
@@ -46,8 +43,7 @@ h3 {
   font-size: 2.2rem;
 }
 
-p,
-li {
+p, li {
   font-size: 1.6rem;
   line-height: 1.5;
 }
@@ -65,14 +61,8 @@ body > * {
   padding: 1%;
 }
 
-main,
-header,
-nav,
-article,
-aside,
-footer,
-section {
-  background-color: rgba(0, 255, 0, 0.5);
+main, header, nav, article, aside, footer, section {
+  background-color: rgba(0,255,0,0.5);
   padding: 1%;
 }
 
@@ -106,8 +96,7 @@ nav li {
   flex: 1;
 }
 
-nav a,
-nav span {
+nav a, nav span {
   display: inline-block;
   font-size: 2rem;
   height: 3rem;
@@ -115,6 +104,7 @@ nav span {
   text-transform: uppercase;
   text-decoration: none;
   color: black;
+
 }
 
 /* || main layout */
@@ -123,8 +113,7 @@ main {
   display: flex;
 }
 
-article,
-section {
+article, section {
   flex: 4;
 }
 
