--- a/week04/index.css
+++ b/week04/index.css
@@ -1,138 +1,66 @@
-/* || General setup */
-
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-size: 10px;
-  background-color: #a9a9a9;
-}
-
-body {
-  width: 70%;
-  min-width: 800px;
-  margin: 0 auto;
-}
-
-/* || typography */
-
-h1, h2, h3 {
-  font-family: 'Cinzel Decorative', cursive;
-  color: #2a2a2a;
-}
-
-p, input, li {
-  font-family: 'Roboto Condensed', sans-serif;
-  color: #2a2a2a;
-}
-
-h1 {
-  font-size: 4rem;
-  text-align: center;
-  text-shadow: 2px 2px 10px black;
-}
-
-h2 {
-  font-size: 3rem;
-  text-align: center;
+p,
+li {
+  font-size: 1.5rem;
 }
 
 h3 {
-  font-size: 2.2rem;
+  font-size: 1.5rem;
 }
-
-p, li {
-  font-size: 1.6rem;
-  line-height: 1.5;
+hr {
+  border-style: none;
+  border-top-style: dotted;
+  border-color: #0f4c75;
+  border-width: 10px;
+  width: 6%;
+  float: right;
 }
-
-/* || header layout */
-
-header {
-  margin-bottom: 10px;
-  display: flex;
-  flex-flow: row wrap;
-}
-
-body > * {
-  background-color: red;
-  padding: 1%;
-}
-
-main, header, nav, article, aside, footer, section {
-  background-color: rgba(0,255,0,0.5);
-  padding: 1%;
-}
-
-h1 {
-  flex: 5;
-  text-transform: uppercase;
-}
-
-header img {
-  display: block;
-  height: 60px;
-  padding-top: 20.15px;
-}
-
 nav {
   height: 50px;
   flex: 100%;
   display: flex;
 }
-
 nav ul {
   padding: 0;
   list-style-type: none;
-  flex: 2;
-  display: flex;
-}
-
-nav li {
-  display: inline;
-  text-align: center;
   flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
-
-nav a, nav span {
+nav li {
+  text-align: center;
+  margin: 0px 7px 7px 0px;
+  border: solid 2px #0f4c75;
+}
+nav a {
   display: inline-block;
-  font-size: 2rem;
-  height: 3rem;
-  line-height: 1.7;
-  text-transform: uppercase;
+  font-size: 1.5rem;
+  line-height: 2;
   text-decoration: none;
   color: black;
-
+}
+nav li:hover {
+  background-color: #0f4c75;
 }
 
-/* || main layout */
-
-main {
-  display: flex;
+h2,
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
 }
 
-article, section {
-  flex: 4;
+p {
+  font-family: 'Lato', sans-serif;
 }
-
-aside {
-  flex: 1;
-  margin-left: 10px;
-  padding: 1%;
+h1 {
+  font-family: 'Courgette', cursive;
+  color: #0f4c75;
 }
-
-aside a {
-  display: block;
-  float: left;
-  width: 50%;
+h2 {
+  color: #0f4c75;
 }
-
-aside img {
-  max-width: 100%;
+h3,
+a {
+  color: #3282b8;
 }
-
 footer {
-  margin-top: 10px;
 }
