--- a/week03/styles.css
+++ b/week03/styles.css
@@ -6,7 +6,7 @@ body {
   color: black;
   line-height: 1.4em;
   margin: 30px;
-  background-image: url('./images/page-bg.gif');
+  background-image: url('page-bg.gif');
   background-attachment: fixed;
   background-color: #f7f3de;
   background-repeat: no-repeat;
@@ -17,7 +17,7 @@ header h1 {
   color: #7c1a00;
   padding: 40px;
   padding-left: 120px;
-  background-image: url('./images/header-image-1.gif');
+  background-image: url('header-image-1.gif');
   background-repeat: no-repeat;
   background-position: top left;
 }
@@ -56,7 +56,7 @@ nav a:hover {
 }
 
 #content {
-  background-image: url('./images/trans-bg.gif');
+  background-image: url('trans-bg.gif');
   border: solid 1px;
   margin-left: 180px;
   padding: 10px;
@@ -83,7 +83,7 @@ h2 {
 }
 
 h3 {
-  background-image: url('./images/header-star-1.gif');
+  background-image: url('header-star-1.gif');
   background-repeat: no-repeat;
   padding-left: 20px;
 }
